Dataset Pagination - allow query parameters ?page=&page_size= when making a GET request
