# datasets/api.py
@@ -36,7 +36,9 @@ def handle_post_datasets():
 @app.route("/datasets/<name>", methods=["GET"])
 def handle_get_dataset(name):
     """Handles GET requests to /datasets/<name>."""
-    return jsonify(get_dataset(name))
+    page = request.args.get('page', None)
+    page_size = request.args.get('page_size', None)
+    return jsonify(get_dataset(name, page, page_size))
 
 
 @app.route("/datasets/<name>", methods=["PATCH"])
